Preparing to publish crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,3 +3,9 @@ name = "bit-long-vec"
 version = "0.1.0"
 authors = ["vagola <vladislavs.golubs@yandex.ru>"]
 edition = "2018"
+description = "Vector with fixed bit sized values stored in long."
+license = "MIT"
+homepage = "https://github.com/eihwaz/bit-long-vec"
+repository = "https://github.com/eihwaz/bit-long-vec"
+keywords = ["bitset", "bitvector"]
+readme = "README.md"
